[gd_scene load_steps=2 format=3 uid="uid://byg32go5q5eca"]

[ext_resource type="Script" path="res://addons/godot_vn/vn_editor/condition_node.gd" id="1_vnj4c"]

[node name="ConditionNode" type="GraphNode"]
offset_right = 387.0
offset_bottom = 251.0
scale = Vector2(1.00468, 1)
mouse_filter = 1
resizable = true
title = "Condition"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(0.0156863, 1, 0, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(0.0156863, 1, 0, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = true
slot/5/right_type = 0
slot/5/right_color = Color(1, 0, 0, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
script = ExtResource("1_vnj4c")
node_type = 3

[node name="NodeIdContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="NodeIdContainer"]
layout_mode = 2
text = "ID:"

[node name="NodeId" type="LineEdit" parent="NodeIdContainer"]
layout_mode = 2
text = "ConditionNode"
editable = false
expand_to_text_length = true

[node name="HBoxContainer2" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = 125

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Variable:"

[node name="VarNameEdit" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "variable name..."
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="HBoxContainer4" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer4"]
layout_mode = 2
text = "Logic Condition:"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer4"]
layout_mode = 2
alignment = 2

[node name="LogicButton" type="OptionButton" parent="HBoxContainer4/HBoxContainer"]
layout_mode = 2
item_count = 6
selected = 0
popup/item_0/text = "Equals"
popup/item_0/id = 0
popup/item_1/text = "Not Equal to"
popup/item_1/id = 1
popup/item_2/text = "Less Than"
popup/item_2/id = 2
popup/item_3/text = "Less Than Equal to"
popup/item_3/id = 3
popup/item_4/text = "Greater Than"
popup/item_4/id = 4
popup/item_5/text = "Greater Than Equal to"
popup/item_5/id = 5

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Variable Type:"

[node name="VarTypeSelect" type="OptionButton" parent="HBoxContainer5"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "INT"
popup/item_0/id = 0
popup/item_1/text = "BOOL"
popup/item_1/id = 1
popup/item_2/text = "STRING"
popup/item_2/id = 2

[node name="StrValueEdit" type="LineEdit" parent="HBoxContainer5"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "text here..."
expand_to_text_length = true
clear_button_enabled = true
caret_blink = true

[node name="BoolValSelect" type="OptionButton" parent="HBoxContainer5"]
visible = false
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "FALSE"
popup/item_0/id = 0
popup/item_1/text = "TRUE"
popup/item_1/id = 1

[node name="IntValEdit" type="SpinBox" parent="HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Label" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
text = "TRUE"
alignment = 1
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Label" type="LineEdit" parent="HBoxContainer3"]
layout_mode = 2
text = "FALSE"
alignment = 1
editable = false

[connection signal="item_selected" from="HBoxContainer5/VarTypeSelect" to="." method="_on_var_type_select_item_selected"]
